--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>I'm working</h2>
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
       <div class="btn btn-primary">Button</div>
     </div>
   </div>
 </div>
+
