--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sx-12">
+  <div class="col-xs-12">
     <form>
       <div class="row">
         <div class="col-sm-5 form-group">
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sx-12">
+        <div class="col-xs-12">
           <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
