--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -14,7 +14,8 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group open">
+    <!--    <div appDropdown [isOpened]="false" class="btn-group">-->
+    <div appDropdown class="btn-group">
       <button
         type="button"
         class="btn btn-primary dropdown-toggle">
