--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,8 +1,9 @@
 <a
   style="cursor: pointer"
   class="list-group-item clearfix"
-  [routerLink]="[index]">
-<!--  (click)="onSelected()">-->
+  [routerLink]="[index]"
+  [routerLinkActive]="['active']">
+  <!--  (click)="onSelected()">-->
 
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
