Make lesson 166 Add routing for new and edit button

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -23,7 +23,10 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer">To Shopping List</a></li>
-        <li><a style="cursor: pointer" routerLink="edit">Edit Recipe</a></li>
+        <!--        1st option-->
+        <!--        <li><a style="cursor: pointer" routerLink="edit">Edit Recipe</a></li>-->
+        <!--        2nd option-->
+        <li><a style="cursor: pointer"  (click)="onEditRecipe()">Edit Recipe</a></li>
         <li><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
