--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" routerLink="new">New Recipe</button>
+<!--    1st option-->
+<!--    <button class="btn btn-success" routerLink="new">New Recipe</button>-->
+<!--    2nd option-->
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
