--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
 
       <div class="row">
         <div class="col-xs-12">
@@ -16,6 +16,7 @@
             <input
               type="text"
               id="name"
+              formControlName="name"
               class="form-control">
           </div>
         </div>
@@ -28,6 +29,7 @@
             <input
               type="text"
               id="imagePath"
+              formControlName="imagePath"
               class="form-control">
           </div>
         </div>
@@ -44,6 +46,7 @@
             <label for="description">Description</label>
             <textarea
               id="description"
+              formControlName="description"
               class="form-control"
               rows="6">
             </textarea>
