--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -55,17 +55,26 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+<!--          <div-->
+<!--            class="row"-->
+<!--            *ngFor="let ingredientCtrl of getContols(); let i = index"-->
+<!--            [formGroupName]="i">-->
+          <div
+            class="row"
+            *ngFor="let ingredientCtrl of contols; let i = index"
+            [formGroupName]="i">
             <div class="col-xs-8">
               <input
                 type="text"
-                class="form-control">
+                class="form-control"
+                formControlName="name">
             </div>
             <div class="col-xs-2">
               <input
                 type="number"
-                class="form-control">
+                class="form-control"
+                formControlName="amount">
             </div>
             <div class="col-xs-2">
               <button class="btn-btn-danger">X</button>
