--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -63,7 +63,8 @@
           <div
             class="row"
             *ngFor="let ingredientCtrl of contols; let i = index"
-            [formGroupName]="i">
+            [formGroupName]="i"
+            style="margin-top: 10px">
             <div class="col-xs-8">
               <input
                 type="text"
@@ -77,7 +78,16 @@
                 formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn-btn-danger">X</button>
+              <button class="btn btn-danger">X</button>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col-xs-12">
+              <button
+                type="button"
+                class="btn btn-success"
+                (click)="onAddIngredient()">Add ingredient</button>
             </div>
           </div>
         </div>
