--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,7 +4,11 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="submit" class="btn btn-success">Save</button>
+          <button
+            type="submit"
+            class="btn btn-success"
+            [disabled]="!recipeForm.valid">Save
+          </button>
           <button type="button" class="btn btn-danger">Cancel</button>
         </div>
       </div>
@@ -56,10 +60,10 @@
 
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-<!--          <div-->
-<!--            class="row"-->
-<!--            *ngFor="let ingredientCtrl of getContols(); let i = index"-->
-<!--            [formGroupName]="i">-->
+          <!--          <div-->
+          <!--            class="row"-->
+          <!--            *ngFor="let ingredientCtrl of getContols(); let i = index"-->
+          <!--            [formGroupName]="i">-->
           <div
             class="row"
             *ngFor="let ingredientCtrl of contols; let i = index"
@@ -87,7 +91,8 @@
               <button
                 type="button"
                 class="btn btn-success"
-                (click)="onAddIngredient()">Add ingredient</button>
+                (click)="onAddIngredient()">Add ingredient
+              </button>
             </div>
           </div>
         </div>
