--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -27,7 +27,7 @@
         <!--        <li><a style="cursor: pointer" routerLink="edit">Edit Recipe</a></li>-->
         <!--        2nd option-->
         <li><a style="cursor: pointer"  (click)="onEditRecipe()">Edit Recipe</a></li>
-        <li><a style="cursor: pointer">Delete Recipe</a></li>
+        <li><a style="cursor: pointer" (click)="onDeleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
