--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -12,7 +12,8 @@
           <button
             type="button"
             class="btn btn-danger"
-            (click)="onCancel()">Cancel</button>
+            (click)="onCancel()">Cancel
+          </button>
         </div>
       </div>
 
@@ -86,7 +87,11 @@
                 formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button type="button" class="btn btn-danger">X</button>
+              <button
+                type="button"
+                class="btn btn-danger"
+                (click)="onDeleteIngredient(i)">X
+              </button>
             </div>
           </div>
           <hr>
