--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <router-outlet></router-outlet>
 <!--      <app-recipes *ngIf="loadedFeature==='recipes'"></app-recipes>-->
 <!--      <app-shopping-list *ngIf="loadedFeature==='shopping-list'"></app-shopping-list>-->
-      <div class="btn btn-primary">Button</div>
+<!--      <div class="btn btn-primary">Button</div>-->
     </div>
   </div>
 </div>
