--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,7 @@
 <!--        <li><a href="#" (click)="onSelect('recipes')">Recipes</a></li>-->
 <!--        <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>-->
         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/auth">Authenication</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
