--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,31 @@
 <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form>
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
       <div class="form-group">
         <label for="email">E-Mail</label>
-        <input type="email" class="form-control" id="email">
+        <input type="email"
+               class="form-control"
+               id="email"
+               ngModel
+               name="email"
+               required
+               email
+        />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password">
+        <input type="password"
+               class="form-control"
+               id="password"
+               ngModel
+               name="password"
+               required
+               minlength="6"
+        />
       </div>
       <div>
-        <button class="btn btn-primary" type="submit">{{isLoginMode ? 'Login' : 'Sign Up'}}</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid">
+          {{isLoginMode ? 'Login' : 'Sign Up'}}</button>
         |
         <button class="btn btn-primary" type="button" (click)="onSwitchMode()">
           Switch to {{isLoginMode ? 'Sign Up' : 'Login'}}</button>
